# hackathon-2022

./: .gitignore  README.md  demo3.app  gen.cabal  gen.sh  myApp.app  package-lock.json  package.json  tailwind.config.js  test.app  test2.app
app/: Gen.hs  Lexer.hs  Main.hs  Parser.hs  Render.hs
app_static/: package-lock.json  package.json  tailwind.config.js
app_static/backend/: backend.js
app_static/public/: index.html
app_static/src/: App.js  App.jsx  axios.jsx
app_static/src/components/: Breadcrumbs.jsx  CustomForm.js  CustomForm.jsx  DynamicTable.js  DynamicTable.jsx  Header.js  Header.jsx  Redirect.jsx  RedirectButton.js  SearchBar.jsx  SimpleButton.js  SimpleButton.jsx  SpaceSplit.jsx  TableRow.js
app_static/src/pages/: PageWrapper.js  PageWrapper.jsx
backend/: backend.js  database.db
public/: index.html
scripts/: createTable.js
src/: App.js
src/components/: CustomForm.js  CustomForm.jsx  DynamicTable.js  TableRow.js
src/pages/: TablePage.js
