cabal-version:      2.4
name:               gen
version:            0.1.0.0
synopsis:           Gen

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             romes
maintainer:         rodrigo.m.mesquita@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable gen
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Gen,
                      Parser,
                      Lexer,
                      Render

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions: 
    build-depends:    base,
                      parsec,
                      text,
                      raw-strings-qq
    hs-source-dirs:   app
    default-language: Haskell2010
